# igc-parser

./: .flake8  .gitignore  .pre-commit-config.yaml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
src/igcparser/: __init__.py  __main__.py  cli.py  enums.py  parser.py
src/parser/: __init__.py  regexes.py
tests/: test_parser.py
