[metadata]
name = Igc Parser
version = attr: igcparser.__version__

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error


[coverage:run]
branch = True
source =
    flask
    tests
