[metadata]
name = Igc Parser
version = attr: igcparser.__version__

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    igcparser = igcparser.cli:main

[mypy]
files = src/igcparser
python_version = 3.8
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-asgiref.*]
ignore_missing_imports = True

[mypy-blinker.*]
ignore_missing_imports = True

[mypy-dotenv.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True

[mypy-importlib_metadata]
ignore_missing_imports = True
